增加照片按照年份分类的功能

--- a/py/templates/base.html
+++ b/py/templates/base.html
@@ -15,7 +15,7 @@
 menus = []
 menus.append(('/', '<a href="/">首页</a>'))
 menus.append(('/blog', '<a href="/blog/0">日志</a>'))
-menus.append(('/photo', '<a href="/photo">相册</a>'))
+menus.append(('/photo', '<a href="/photo/0">相册</a>'))
 menus.append(('/resource', '<a href="/resource">资源</a>'))
 if mgrprivilege:
 	menus.append(('/manage', '<a href="/manage/blog">管理</a>'))
