--- a/py/templates/loginview.html
+++ b/py/templates/loginview.html
@@ -25,7 +25,7 @@
 		</div>
 		<form id="guest-login" action="" method="post">
 			<div class="login-item">
-				<label>我的名字是：</label>
+				<label>网站主人的名字是：</label>
 				<input class="input-text" type="text" name="user" value=""></input>
 			</div>
 			<div class="login-item">
