--- a/static/css/my.css
+++ b/static/css/my.css
@@ -281,6 +281,7 @@ input[type="text"]:focus, input[type="password"]:focus, textarea:focus{
 
 .simple-list .photo-li {
 	float: left;
+	width: 160px;
 	padding-top: 10px;
 	padding-bottom: 10px;
 	margin-bottom: 10px;
@@ -345,7 +346,13 @@ input[type="text"]:focus, input[type="password"]:focus, textarea:focus{
 	display: none;
 }
 
+.photo-row {
+	float: left;
+	width: 100%;
+}
+
 .photo-item {
+	float: left;
 }
 
 .photo-item ul {
