modify title header font size.

--- a/py/templates/base.html
+++ b/py/templates/base.html
@@ -4,6 +4,7 @@
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<title>逆水行舟</title>
+		<link type="image/x-icon" rel="Shortcut Icon" href="/static/image/favicon.png"/>
 		<link type="text/css" href="/static/css/hot-sneaks/jquery-ui.css" rel="Stylesheet" />	
 		<link type="text/css" href="/static/css/magnific-popup.css" rel="Stylesheet" />
 		<link type="text/css" href="/static/css/my.css" rel="Stylesheet" />
