--- a/py/templates/loginview.html
+++ b/py/templates/loginview.html
@@ -1,82 +1,75 @@
-<%inherit file='base.html' />
-
-<%def name="category()">
-<h4>分类</h4>
-<ul>
-	<li>暂无</li>
-</ul>
-</%def>
-
-<div class="simple-list">
-	<h1>登录</h1>
+<div class="modal-header">
+	<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+	<h4 class="modal-title" id="myModalLabel">登录</h4>
+</div>
+<div class="modal-body">
 	<div id='login-info'>
 		<div id="login-option">
 			<div>
 				<label>
 					<input id="login-type-guest" type="radio"
 					name="login-option" value="guest" checked="checked">
-					</input>朋友登录</label>
+					</input>
+					朋友登录
+				</label>
 			</div>
 			<div>
 				<label><input id="login-type-user" type="radio"
 					name="login-option" value="user" >
-					</input>用户登录</label>
+					</input>
+					用户登录
+				</label>
+				</div>
 			</div>
+			<form id="guest-login" action="" method="post">
+				<div class="login-item">
+					<input class="input-text" type="text" name="user" 
+					placeholder="网站主人中文名" value="" autofocus>
+					</input>
+				</div>
+				<div class="login-item">
+					<input class="input-text" type="text" name="authcode" placeholder="验证码" value=""></input>
+				</div>
+				<div class="login-item">
+					<label>验证图片(点击图片更换)：</label>
+					<img class="authphoto" title="点击更换图片"></img>
+				</div>
+				<div class="login-item">
+					<div class="login-help">
+						<span></span>
+					</div>
+				</div>
+			</form>
+			<form id="login-form" action="" method="post">
+				<div class="login-item">
+					<input class="input-text" type="text" name="user" 
+					placeholder="用户名" value="" autofocus>
+					</input>
+				</div>
+				<div class="login-item">
+					<input class="input-text" type="password" name="passwd" placeholder="密码" value=""></input>
+				</div>
+				<div class="login-item">
+					<input class="input-text" type="text" name="authcode" placeholder="验证码" value=""></input>
+				</div>
+				<div class="login-item">
+					<label>验证图片(点击图片更换)：</label>
+					<img class="authphoto" title="点击更换图片"></img>
+				</div>
+				<div class="login-item">
+					<div class="login-help">
+						<span></span>
+					</div>
+				</div>
+			</form>
 		</div>
-		<form id="guest-login" action="" method="post">
-			<div class="login-item">
-				<label>网站主人的名字是：</label>
-				<input class="input-text" type="text" name="user" value=""></input>
-			</div>
-			<div class="login-item">
-				<label>验证码：</label>
-				<input class="input-text" type="text" name="authcode" value=""></input>
-			</div>
-			<div class="login-item">
-				<label>验证图片(点击图片更换)：</label>
-				<img class="authphoto" title="点击更换图片"></img>
-			</div>
-			<div class="login-item">
-				<input class="submit" type="button" value="登录"></input>
-			</div>
-			<div class="login-item">
-				<div class="login-help">
-					<span></span>
-				</div>
-			</div>
-		</form>
-		<form id="login-form" action="" method="post">
-			<div class="login-item">
-				<label>用户名：</label>
-				<input class="input-text" type="text" name="user" value=""></input>
-			</div>
-			<div class="login-item">
-				<label>密码：</label>
-				<input class="input-text" type="password" name="passwd" value=""></input>
-			</div>
-			<div class="login-item">
-				<label>验证码：</label>
-				<input class="input-text" type="text" name="authcode" value=""></input>
-			</div>
-			<div class="login-item">
-				<label>验证图片(点击图片更换)：</label>
-				<img class="authphoto" title="点击更换图片"></img>
-			</div>
-			<div class="login-item">
-				<input class="submit" type="button" value="登录"></input>
-			</div>
-			<div class="login-item">
-				<div class="login-help">
-					<span></span>
-				</div>
-			</div>
-		</form>
 	</div>
 </div>
+<div class="modal-footer">
+	<button type="button" id="authlogin" class="btn btn-default btn-primary">登录</button>
+</div>
 
-<%def name='loadjs()'>
 <script type="text/javascript" src="/static/js/md5.js"></script>
 <script type="text/javascript">
 	$(initLoginView);
 </script>
-</%def>
