--- a/py/templates/mgrblogview.html
+++ b/py/templates/mgrblogview.html
@@ -33,10 +33,10 @@
 					<select>
 					</select>
 				</div>
-				<input type="button" name="submit" value="提交" id="submit"></input>
-				<input type="button" name="new" value="新建" id="new"
+				<input class="btn btn-primary" type="button" name="submit" value="提交" id="submit"></input>
+				<input class="btn btn-primary" type="button" name="new" value="新建" id="new"
 				onclick="window.location.href='/manage/blog'"></input>
-				<input type="button" name="delete" value="删除" id="delete"></input>
+				<input class="btn btn-primary" type="button" name="delete" value="删除" id="delete"></input>
 			</form>
 		</div>
 		% else:
