--- a/py/templates/mgrresview.html
+++ b/py/templates/mgrresview.html
@@ -56,10 +56,10 @@
 				% endif
 				</select>
 			</div>
-			<input type="submit" name="submit" value="提交" id="submit"></input>
-			<input type="button" name="new" value="新建" id="new"
+			<input class="btn btn-primary" type="submit" name="submit" value="提交" id="submit"></input>
+			<input class="btn btn-primary" type="button" name="new" value="新建" id="new"
 			onclick="window.location.href='/manage/resource'"></input>
-			<input type="button" name="delete" value="删除" id="delete"></input>
+			<input class="btn btn-primary" type="button" name="delete" value="删除" id="delete"></input>
 		</form>
 		% else:
 		${self.errPrivilege()}
