--- a/py/templates/mgruserview.html
+++ b/py/templates/mgruserview.html
@@ -48,10 +48,10 @@
 					<option value="2">管理员</option>
 				</select>
 			</div>
-			<input type="button" name="submit" value="提交" id="submit"></input>
-			<input type="button" name="new" value="新建" id="new"
+			<input class="btn btn-primary" type="button" name="submit" value="提交" id="submit"></input>
+			<input class="btn btn-primary" type="button" name="new" value="新建" id="new"
 			onclick="window.location.href='/manage/user/'"></input>
-			<input type="button" name="delete" value="删除" id="delete"></input>
+			<input class="btn btn-primary" type="button" name="delete" value="删除" id="delete"></input>
 		</form>
 		% else:
 		${self.errPrivilege()}
