--- a/py/templates/resourceview.html
+++ b/py/templates/resourceview.html
@@ -3,6 +3,11 @@
 <%def name="loadcss()">
 </%def>
 <%def name='loadjs()'>
+<script type="text/javascript">
+$(".pageindex").bind("click", function(event){
+		window.location.href = $(this).attr('tourl');
+});
+</script>
 </%def>
 
 <%
@@ -63,9 +68,7 @@ for item in categorys:
 		% if pageidx == i:
 		<li class="selectpage" index="${i}">${i}</li>
 		% else:
-		<li class="pageindex" index="${i}">
-		<a href="/resource/${categoryid}/${i}/${pagesize}">${i}</a>
-		</li>
+		<li class="pageindex" index="${i}" tourl="/resource/${categoryid}/${i}/${pagesize}">${i}</li>
 		% endif
 		% endfor
 	</ul>
