--- a/py/templates/base.html
+++ b/py/templates/base.html
@@ -73,7 +73,8 @@ menus.append('<a href="/about">关于</a>')
 						<div class="widget-side">
 							<h4>个人资料</h4>
 							<ul class="newlink">
-								<li><a href="mailto:zhangshizhuo@gmail.com">Email Me</a></li>
+								<li>zg zhang</li>
+								<li>zhangshizhuo@gmail.com</li>
 							</ul>
 						</div>
 						<a id="scrollDown" href="#my-footer" title=""></a>
