add code highlight for blog.

--- a/py/templates/base.html
+++ b/py/templates/base.html
@@ -13,6 +13,7 @@
 		<link type="text/css" href="http://cdn.bootcss.com/bootstrap/3.1.1/css/bootstrap-theme.min.css" rel="stylesheet">
 		<!-- Optional theme -->
 		<link type="text/css" href="/static/css/my.css" rel="Stylesheet" />
+		<link type="text/css" href="/static/css/pygments.css" rel="Stylesheet" />
 		${self.loadcss()}
 	</head>
 
