--- a/static/css/my.css
+++ b/static/css/my.css
@@ -205,7 +205,7 @@ input[type="text"]:focus, input[type="password"]:focus, textarea:focus{
 	text-decoration: none;
 	font-weight: bold;
 	text-align: center;
-	color: yellow;
+	color: #ffcc00;
 	text-shadow: 4px 4px 4px #333300;
 }
 
@@ -267,7 +267,7 @@ input[type="text"]:focus, input[type="password"]:focus, textarea:focus{
 .simple-list>h1 {
 	/* background-color: #669999; */
 	font-style: italic;
-	color: #FFCC00;
+	color: #FFF;
 	background-color: #669999;
 	padding-left: 10px;
 	padding-top: 8px;
@@ -591,7 +591,7 @@ background: #EDF4F1;
 	margin-left: 0px;
 	margin-bottom: 10px;
 	background-color: #669999;
-	color: #ffcc00;
+	color: #fff;
 	padding: 5px;
 	-moz-border-radius: 8px 8px 8px 8px;
 	-webkit-border-radius: 8px 8px 8px 8px;
@@ -626,8 +626,10 @@ background: #EDF4F1;
 }
 
 .widget-side ul li.selected a {
+	/*
     color: #40495B;
     font-weight: bold;
+	*/
 }
 
 #login-info{
