--- a/py/templates/base.html
+++ b/py/templates/base.html
@@ -74,12 +74,17 @@ menus.append('<a href="/about">关于</a>')
 						<div class="widget-side">
 							<h4>个人资料</h4>
 							<ul class="newlink">
-								<li>zg zhang</li>
 								<li>zhangshizhuo@gmail.com</li>
 							</ul>
 						</div>
+						<!--
+						<div class="widget-side">
+							<h4>阅读，电影</h4>
+							<script type="text/javascript" src="http://www.douban.com/service/badge/29839642/?selection=random&amp;picsize=medium&amp;show=collection&amp;n=8&amp;hidelogo=on&amp;cat=book&amp;columns=2"></script>
+						</div>
 						<a id="scrollDown" href="#my-footer" title=""></a>
 						<a id="scrollUp" href="#top" title=""></a>
+						-->
 					</div>
 				</div>
 			</div>
@@ -106,6 +111,7 @@ menus.append('<a href="/about">关于</a>')
 		$("#loginModal").on("hidden.bs.modal", function() {
 				$(this).removeData("bs.modal");
 				});
+/*
 		$(function(){
 				var scollTop = function(info){
 				$(".pinned").pin({containerSelector: "#my-content",
@@ -113,6 +119,7 @@ menus.append('<a href="/about">关于</a>')
 				$(scollTop);
 				$(document).ajaxComplete(scollTop);
 				});
+				*/
 	</script>
 	</html>
 
