modify side bar color.

--- a/static/css/my.css
+++ b/static/css/my.css
@@ -569,7 +569,7 @@ background: #EDF4F1;
 .widget-side {
 	float: left;
 	/* background: #E7F2FA; */
-	background: #e9ffe9;
+	background: #FAFAFA;
 	margin-top: 16px;
 	margin-left: 0px;
 	margin-right: 0px;
