--- a/py/templates/base.html
+++ b/py/templates/base.html
@@ -3,6 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+		<meta name="baidu-site-verification" content="bHvQ6gFu33" />
 		<title>逆水行舟</title>
 		<link type="image/x-icon" rel="Shortcut Icon" href="/static/image/favicon.png"/>
 		<!--
@@ -92,7 +93,6 @@ menus.append('<a href="/about">关于</a>')
 		<div id="my-footer">
 			<p><span>&copy;2010 www.hopez.org, all rights reserved</span></p>
 		</div>
-	</body>
 	<!--
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.js"></script>
 	<script type="text/javascript" src="/static/js/pirobox.js"></script>
@@ -121,6 +121,11 @@ menus.append('<a href="/about">关于</a>')
 				});
 				*/
 	</script>
+	<script type="text/javascript">
+		var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
+		document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F688219a6dee68bfbe28a2348e953ac1c' type='text/javascript'%3E%3C/script%3E"));
+	</script>
+	</body>
 	</html>
 
 	<%def name='loadcss()'>
