open station in new windows

--- a/py/templates/blogview.html
+++ b/py/templates/blogview.html
@@ -50,7 +50,7 @@ for item in categorys:
 		<div class="blog-item">
 			% endif
 			<div class="blog-head">
-				<a href="/blog/${blog['category_id']}/${blog['blogid']}">
+				<a href="/blog/${blog['category_id']}/${blog['blogid']}" target="_blank">
 					${blog['title']}
 				</a>
 			</div>
