--- a/py/templates/photoview.html
+++ b/py/templates/photoview.html
@@ -11,6 +11,22 @@
 % if item['category_id'] == int(categoryid):
 </%doc>
 
+<%def name="title()">
+% if blogid:
+<% return blogs[0]['title'] + ' - ' %>
+% else:
+% for item in categorys:
+% if item['category_id'] == int(categoryid):
+<% return item['name'] + ' - ' %>
+% endif
+% endfor
+<% return '' %>
+% endif
+</%def>
+
+<%def name="keywords()">
+</%def>
+
 
 <%def name="category()">
 <h4>分类</h4>
