--- a/py/templates/base.html
+++ b/py/templates/base.html
@@ -4,7 +4,9 @@
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="baidu-site-verification" content="bHvQ6gFu33" />
-		<title>逆水行舟</title>
+		<meta name="google-site-verification" content="vk-UicA5s3bUfvIbgE9eYTECP9MbTtXQrRsBvVBvbvw" />
+		<title>${self.title()}逆水行舟</title>
+		<meta name="keywords" content="${self.keywords()}">
 		<link type="image/x-icon" rel="Shortcut Icon" href="/static/image/favicon.png"/>
 		<!--
 		<link type="text/css" href="/static/css/hot-sneaks/jquery-ui.css" rel="Stylesheet" />	
@@ -37,7 +39,7 @@ menus.append('<a href="/about">关于</a>')
 
 	<body id="my-interior">
 		<div id="my-header">
-			<a id="my-navigation-home" href="/"></a>
+			<a id="my-navigation-home" href="http://www.hopez.org"></a>
 			<div id="my-navigation">
 				<ul>
 					% for menu in menus:
@@ -91,7 +93,7 @@ menus.append('<a href="/about">关于</a>')
 			</div>
 		</div>
 		<div id="my-footer">
-			<p><span>&copy;2010 www.hopez.org, all rights reserved</span></p>
+			<p><span>&copy;2010-2014 www.hopez.org, all rights reserved</span></p>
 		</div>
 	<!--
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.js"></script>
@@ -125,9 +127,18 @@ menus.append('<a href="/about">关于</a>')
 		var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
 		document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F688219a6dee68bfbe28a2348e953ac1c' type='text/javascript'%3E%3C/script%3E"));
 	</script>
+	<script>
+		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o), m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+		ga('create', 'UA-52301067-1', 'auto');
+		ga('send', 'pageview');
+	</script>
 	</body>
 	</html>
 
+	<%def name="title()">
+	</%def>
+	<%def name="keywords()">
+	</%def>
 	<%def name='loadcss()'>
 	</%def>
 	<%def name='loadjs()'>
