--- a/static/css/my.css
+++ b/static/css/my.css
@@ -313,6 +313,13 @@ input[type="text"]:focus, input[type="password"]:focus, textarea:focus{
 .categoryattr {
 	float: right;
 	margin-right: 1em;
+	padding-left: 4px;
+	padding-right: 4px;
+	background: #669999;
+}
+
+.categoryattr > a {
+	color: #fff;
 }
 
 .mgr-content{
@@ -425,8 +432,12 @@ input[type="text"]:focus, input[type="password"]:focus, textarea:focus{
 }
 
 .simple-list .blog-li, .simple-list .resource-li {
+	/* 
+	 * border: 1px solid #fff;
+	 * border-top: 1px dashed #339933;
+	 */
 	border: 1px solid #fff;
-	border-top: 1px dashed #339933;
+	border-bottom: 1px solid #eee;
 	padding-top: 8px;
 	padding-bottom: 6px;
 	margin-bottom: 10px;
