add vps affiliates

--- a/py/templates/base.html
+++ b/py/templates/base.html
@@ -71,13 +71,21 @@ menus.append('<a href="/about">关于</a>')
 						<div class="widget-side">
 							<h4>友情链接</h4>
 							<ul class="newlink">
-								<li><a href="http://www.rui-yang.com/">Everybody loves Rui</a></li>
+								<li><a href="http://www.rui-yang.com/" target="_blank">Everybody loves Rui</a></li>
 							</ul>
 						</div>
 						<div class="widget-side">
 							<h4>个人资料</h4>
 							<ul class="newlink">
 								<li>zhangshizhuo@gmail.com</li>
+							</ul>
+						</div>
+						<div class="widget-side">
+							<h4>国外优秀vps推荐(本人在用)</h4>
+							<ul class="newlink">
+								<li><a href="https://www.linode.com/?r=54f6d21e62c7f28225452ca22145a2101ec5e023" target="_blank">linode 最好(本站用)</a></li>
+								<li><a href="http://www.prometeus.net/billing/aff.php?aff=122" target="_blank">prometeus 性价比高，稳定</a></li>
+								<li><a href="https://clientarea.ramnode.com/aff.php?aff=1614" target="_blank">ramnode 性价比高，稳定</a></li>
 							</ul>
 						</div>
 						<!--
