--- a/py/templates/blogview.html
+++ b/py/templates/blogview.html
@@ -10,12 +10,12 @@
 <script type="text/javascript" src="/static/third/syntaxhighlighter/scripts/shCore.js"></script>
 <script type="text/javascript" src="/static/third/syntaxhighlighter/scripts/shBrushCpp.js"></script>
 <script type="text/javascript">SyntaxHighlighter.all();</script>
--->
 <script type="text/javascript">
 $(".pageindex").bind("click", function(event){
 		window.location.href = $(this).attr('tourl');
 });
 </script>
+-->
 </%def>
 
 <%
@@ -113,7 +113,9 @@ for item in categorys:
 		% if pageidx == i:
 		<li class="selectpage" index="${i}">${i}</li>
 		% else:
-		<li class="pageindex" index="${i}" tourl="/blog/${categoryid}/${i}/${pagesize}">${i}</li>
+		<li class="pageindex" index="${i}">
+		<a href="/blog/${categoryid}/${i}/${pagesize}">${i}</a>
+		</li>
 		% endif
 		% endfor
 	</ul>
