--- a/static/css/my.css
+++ b/static/css/my.css
@@ -186,6 +186,16 @@ input[type="text"]:focus, input[type="password"]:focus, textarea:focus{
 	border-radius: 16px;
 }
 
+#my-station-desc {
+	float: left;
+	padding-top: 40px;
+	width: 240px;
+	margin-top: 8px;
+	color: #bbb;
+	font-size: 13px;
+	font-style: italic;
+}
+
 #my-navigation a:link,
 #my-navigation a:visited {
 	font-weight: bold;
@@ -403,6 +413,7 @@ input[type="text"]:focus, input[type="password"]:focus, textarea:focus{
 .blog-attrs, .resource-attrs{
 	font-style: italic;
 	margin-bottom: 8px;
+	font-size: 12px;
 }
 
 .blog-item .blog-head, 
